--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": ">=5.3.0",
         "monolog/monolog": "^2.0",
         "symfony/var-dumper": "~3.0|~4.0",
-        "vlucas/phpdotenv": "~2.2",
+        "vlucas/phpdotenv": "^5.5",
         "symfony/http-foundation": "~3.0|~4.0",
         "nesbot/carbon": "~1.21",
         "longman/ip-tools": "~1.1"
