--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=5.3.0",
         "monolog/monolog": "^2.0",
-        "symfony/var-dumper": "~3.0|~4.0",
+        "symfony/var-dumper": "~3.0|~4.0|~6.0",
         "vlucas/phpdotenv": "^5.5",
         "symfony/http-foundation": "~3.0|~4.0",
         "nesbot/carbon": "^2.6",
